/*
 *
 *  * Copyright (C) 2025 - Universidad Polit√©cnica de Madrid - UPM
 *  *
 *  * This program is free software: you can redistribute it and/or modify
 *  * it under the terms of the GNU General Public License as published by
 *  * the Free Software Foundation, either version 3 of the License, or
 *  * (at your option) any later version.
 *  *
 *  * This program is distributed in the hope that it will be useful,
 *  * but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  * GNU General Public License for more details.
 *  *
 *  * You should have received a copy of the GNU General Public License
 *  * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 */

syntax = "proto3";

package transfer_messages;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// -----------------------------------------------------------------
// SERVICE DEFINITION
// -----------------------------------------------------------------

service TransferAgentMessages {
  rpc GetAllMessages (PaginationRequestMessages) returns (TransferMessageListResponse);
  rpc CreateMessage (CreateMessageRequest) returns (TransferMessageResponse);
  rpc GetMessageById (ResourceIdRequestMessages) returns (TransferMessageResponse);
  rpc DeleteMessage (ResourceIdRequestMessages) returns (google.protobuf.Empty);
  rpc GetMessagesByProcessId (ResourceIdRequestMessages) returns (TransferMessageListResponse);
}

// -----------------------------------------------------------------
// REQUEST MESSAGES
// -----------------------------------------------------------------

message PaginationRequestMessages {
  optional uint64 limit = 1;
  optional uint64 page = 2;
}

message ResourceIdRequestMessages {
  string id = 1;
}

message CreateMessageRequest {
  optional string id = 1;
  string transfer_agent_process_id = 2;
  string direction = 3;
  string protocol = 4;
  string message_type = 5;
  string state_transition_from = 6;
  string state_transition_to = 7;
  optional string payload_json = 8;
}

// -----------------------------------------------------------------
// RESPONSE MESSAGES
// -----------------------------------------------------------------

message TransferMessageResponse {
  string id = 1;
  string transfer_agent_process_id = 2;
  string direction = 3;
  string protocol = 4;
  string message_type = 5;
  string state_transition_from = 6;
  string state_transition_to = 7;
  optional string payload_json = 8;
  google.protobuf.Timestamp created_at = 9;
  optional google.protobuf.Timestamp updated_at = 10;
}

message TransferMessageListResponse {
  repeated TransferMessageResponse messages = 1;
}